Refactor data access and initialization logic; update entity mappings and improve error handling