@@ -1,6 +1,9 @@
 package Services;
 
 import DAO.PersonDAO;
+import java.nio.charset.StandardCharsets;
+import java.security.MessageDigest;
+import java.security.NoSuchAlgorithmException;
 import odb.Person;
 
 public class PersonService {
@@ -15,19 +18,23 @@ public class PersonService {
         String trimmedAddress = requireNonBlank(address, "Address is required");
         String normalizedGender = requireValidGender(gender);
 
-        Person existing = personDAO.findByEmail(email.trim());
+        Person existing = personDAO.findByEmail(trimmedEmail);
         if (existing != null) {
             throw new IllegalStateException("Email already registered");
         }
+
+        String hashedPassword = hashPassword(trimmedPassword);
+
         Person person = new Person(
                 trimmedName,
                 trimmedEmail,
-                trimmedPassword,
+                hashedPassword,
                 trimmedSsn,
                 trimmedPhone,
                 trimmedAddress,
                 normalizedGender
         );
+
         personDAO.insert(person);
         return person;
     }
@@ -42,6 +49,7 @@ public class PersonService {
         if (person == null) {
             throw new IllegalArgumentException("Person is required");
         }
+
         String trimmedName = requireNonBlank(name, "Name is required");
         String trimmedEmail = requireValidEmail(email);
         String trimmedSsn = requireValidSsn(ssn);
@@ -49,7 +57,7 @@ public class PersonService {
         String trimmedAddress = requireNonBlank(address, "Address is required");
         String normalizedGender = requireValidGender(gender);
 
-        Person existing = personDAO.findByEmail(email.trim());
+        Person existing = personDAO.findByEmail(trimmedEmail);
         if (existing != null && !existing.getId().equals(person.getId())) {
             throw new IllegalStateException("Email already registered");
         }
@@ -60,12 +68,13 @@ public class PersonService {
         person.setPhone(trimmedPhone);
         person.setAddress(trimmedAddress);
         person.setGender(normalizedGender);
+
         personDAO.update(person);
         return person;
     }
 
     private String requireNonBlank(String value, String message) {
-        if (value == null || value.isBlank()) {
+        if (value == null || value.trim().isEmpty()) {
             throw new IllegalArgumentException(message);
         }
         return value.trim();
@@ -75,6 +84,7 @@ public class PersonService {
         String trimmed = requireNonBlank(email, "Email is required");
         int atIndex = trimmed.indexOf('@');
         int dotIndex = trimmed.lastIndexOf('.');
+
         if (atIndex <= 0 || dotIndex <= atIndex + 1 || dotIndex >= trimmed.length() - 1) {
             throw new IllegalArgumentException("Email format is invalid");
         }
@@ -84,6 +94,7 @@ public class PersonService {
     private String requireValidSsn(String ssn) {
         String trimmed = requireNonBlank(ssn, "SSN is required");
         String digitsOnly = trimmed.replaceAll("[^0-9]", "");
+
         if (digitsOnly.length() != 9) {
             throw new IllegalArgumentException("SSN must contain 9 digits");
         }
@@ -93,6 +104,7 @@ public class PersonService {
     private String requireValidPhone(String phone) {
         String trimmed = requireNonBlank(phone, "Phone is required");
         String digitsOnly = trimmed.replaceAll("[^0-9]", "");
+
         if (digitsOnly.length() < 7) {
             throw new IllegalArgumentException("Phone number is invalid");
         }
@@ -101,12 +113,30 @@ public class PersonService {
 
     private String requireValidGender(String gender) {
         String trimmed = requireNonBlank(gender, "Gender is required");
+
         if (trimmed.equalsIgnoreCase("male")) {
             return "Male";
         }
         if (trimmed.equalsIgnoreCase("female")) {
             return "Female";
         }
+
         throw new IllegalArgumentException("Gender must be Male or Female");
+    }
+
+    private String hashPassword(String password) {
+        try {
+            MessageDigest digest = MessageDigest.getInstance("SHA-256");
+            byte[] hash = digest.digest(password.getBytes(StandardCharsets.UTF_8));
+            StringBuilder sb = new StringBuilder(hash.length * 2);
+
+            for (byte b : hash) {
+                sb.append(String.format("%02x", b));
+            }
+
+            return sb.toString();
+        } catch (NoSuchAlgorithmException ex) {
+            throw new IllegalStateException("SHA-256 not available", ex);
+        }
     }
 }
